tests/fixtures/invalid/pow_bool_none_str.py
# Cannot call pow() with Bool, None, Str
x = pow(True, None, "hello")
